BUGFIX: Prevent label from wrapping
The dropdowns for the column and row settings of the ckeditor tables wrap the label after the checkbox. To prevent that we now inline the checkbox. So that the text is in the same level.

fixes: #3035

--- a/packages/react-ui-components/src/CheckBox/style.css
+++ b/packages/react-ui-components/src/CheckBox/style.css
@@ -1,7 +1,7 @@
 .checkbox {
     composes: reset from './../reset.css';
     position: relative;
-    display: block;
+    display: inline-block;
     width: 20px;
     height: 20px;
     margin-right: 8px;
